Remove .row baseline alignment as it is bugging some panes and yet I couldn't figure the reason for is existence.

--- a/source/static/sass/layout.sass
+++ b/source/static/sass/layout.sass
@@ -348,7 +348,6 @@
   display: flex
   flex-flow: row
   flex-wrap: wrap
-  align-items: baseline
 
   > .grow
     flex-grow: 1
